# uto-routing-platform

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  what-have-done
.data/: uto_app.db
.github/workflows/: ci.yml
db/init/: 01_schema.sql  02_seed.sh
sample_dataset_csv/: compatibility.csv  road_edges.csv  road_nodes.csv  tasks.csv  vehicles.csv  wells.csv
scripts/: export_sample_csv.py  print_share_url.py
tests/: test_api.py  test_benchmark.py  test_data_loading.py  test_graph.py  test_service.py  test_time_model.py
uto_routing/: __init__.py  api.py  audit.py  benchmark.py  config.py  data_loading.py  graph.py  logging_utils.py  main.py  models.py  ortools_solver.py  planners.py  realtime.py  replay.py  reviewer_auth.py  sample_data.py  scoring.py  service.py  storage.py  tuning.py
uto_routing/migrations/postgres/: 001_app_tables.sql
uto_routing/migrations/sqlite/: 001_app_tables.sql
uto_routing/static/: app.js  index.html  login.html  login.js  styles.css
